Removed overflow: hidden from dropdown to fix desktop bug

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -101,10 +101,6 @@ label.btn input[type=checkbox] {
     border-radius: 6px;
 }
 
-.dropdown {
-    overflow: hidden;
-}
-
 #hero-list.dropdown-menu {
     min-width: 420px;
 }
